full data model

--- a/sentiment.ipynb
+++ b/sentiment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,15 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iperparametri ottimali: {'C': 1, 'degree': 1}\n"
+     ]
+    }
+   ],
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)\n",
     "#X_cv, X_val, y_cv, y_val = train_test_split(X_train, y_train, test_size=0.2, random_state=77, stratify=y)\n",
@@ -191,21 +199,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Accuracy: 0.85125\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.87      0.74      0.80       200\n",
-      "           1       0.77      0.89      0.83       200\n",
+      "           0       0.85      0.85      0.85       400\n",
+      "           1       0.85      0.85      0.85       400\n",
       "\n",
-      "    accuracy                           0.81       400\n",
-      "   macro avg       0.82      0.81      0.81       400\n",
-      "weighted avg       0.82      0.81      0.81       400\n",
+      "    accuracy                           0.85       800\n",
+      "   macro avg       0.85      0.85      0.85       800\n",
+      "weighted avg       0.85      0.85      0.85       800\n",
       "\n"
      ]
     }
@@ -221,6 +230,52 @@
     "accuracy = accuracy_score(y_test, y_pred)\n",
     "print(f'Accuracy: {accuracy}')\n",
     "print(report)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.8936\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.90      0.88      0.89      5000\n",
+      "           1       0.88      0.90      0.89      5000\n",
+      "\n",
+      "    accuracy                           0.89     10000\n",
+      "   macro avg       0.89      0.89      0.89     10000\n",
+      "weighted avg       0.89      0.89      0.89     10000\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# eliminiamo le review che non hanno il label considerando che vogliamo fare dell'aprendimento supervisionato\n",
+    "data_filtered = data.dropna(subset=['label']).copy()\n",
+    "#generiamo la matrice in base alle fetures precedentemente create su tutto il corpus e ai documenti con cui vogliamo fare la classificazione\n",
+    "X = tfidf_vectorizer.transform(data_filtered['clean_review'])\n",
+    "# associamo il label ad un valore numerico\n",
+    "le = LabelEncoder()\n",
+    "data_filtered['label_encoded'] = le.fit_transform(data_filtered['label'])\n",
+    "#classificazione\n",
+    "y = data_filtered['label_encoded']\n",
+    "#kernel choice \n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)\n",
+    "\n",
+    "linear_svm =  svm.SVC(kernel='linear')\n",
+    "linear_svm.fit(X_train, y_train)\n",
+    "y_pred = linear_svm.predict(X_test)\n",
+    "# Stampa di precisione, richiamo e F1 per ciascuna classe\n",
+    "report = classification_report(y_test, y_pred)\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "print(f'Accuracy: {accuracy}')\n",
+    "print(report)"
    ]
   }
  ],
