--- a/sentiment.ipynb
+++ b/sentiment.ipynb
@@ -221,9 +221,9 @@
    ],
    "source": [
     "\n",
-    "linear_svm =  svm.SVC(kernel='poly', degree=grid_search.best_params_['degree'], C=grid_search.best_params_['C'] )\n",
-    "linear_svm.fit(X_train, y_train)\n",
-    "y_pred = linear_svm.predict(X_test)\n",
+    "svm =  svm.SVC(kernel='poly', degree=grid_search.best_params_['degree'], C=grid_search.best_params_['C'] )\n",
+    "svm.fit(X_train, y_train)\n",
+    "y_pred = svm.predict(X_test)\n",
     "classification_report(y_test, y_pred)\n",
     "# Stampa di precisione, richiamo e F1 per ciascuna classe\n",
     "report = classification_report(y_test, y_pred)\n",
