--- a/sentiment.ipynb
+++ b/sentiment.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "%reset -f \n",
     "import pandas as pd\n",
     "import os\n",
     "import re\n",
@@ -125,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,18 +167,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iperparametri ottimali: {'C': 1, 'degree': 1}\n"
+      "Iperparametri ottimali: {'C': 1, 'degree': 1}\n",
+      "CPU times: user 6min 2s, sys: 8.32 ms, total: 6min 2s\n",
+      "Wall time: 6min 2s\n"
      ]
     }
    ],
    "source": [
+    "%%time\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)\n",
     "#X_cv, X_val, y_cv, y_val = train_test_split(X_train, y_train, test_size=0.2, random_state=77, stratify=y)\n",
     "\n",
@@ -199,31 +203,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.85125\n",
+      "Accuracy: 0.855\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.85      0.85      0.85       400\n",
-      "           1       0.85      0.85      0.85       400\n",
+      "           0       0.87      0.83      0.85       400\n",
+      "           1       0.84      0.88      0.86       400\n",
       "\n",
       "    accuracy                           0.85       800\n",
-      "   macro avg       0.85      0.85      0.85       800\n",
-      "weighted avg       0.85      0.85      0.85       800\n",
-      "\n"
+      "   macro avg       0.86      0.85      0.85       800\n",
+      "weighted avg       0.86      0.85      0.85       800\n",
+      "\n",
+      "CPU times: user 5.63 s, sys: 10 µs, total: 5.63 s\n",
+      "Wall time: 5.63 s\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "svm =  svm.SVC(kernel='poly', degree=grid_search.best_params_['degree'], C=grid_search.best_params_['C'] )\n",
-    "svm.fit(X_train, y_train)\n",
-    "y_pred = svm.predict(X_test)\n",
+    "%%time\n",
+    "linear_svm =  svm.SVC(kernel='poly', degree=grid_search.best_params_['degree'], C=grid_search.best_params_['C'] )\n",
+    "linear_svm.fit(X_train, y_train)\n",
+    "y_pred = linear_svm.predict(X_test)\n",
     "classification_report(y_test, y_pred)\n",
     "# Stampa di precisione, richiamo e F1 per ciascuna classe\n",
     "report = classification_report(y_test, y_pred)\n",
@@ -234,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -250,12 +256,14 @@
       "    accuracy                           0.89     10000\n",
       "   macro avg       0.89      0.89      0.89     10000\n",
       "weighted avg       0.89      0.89      0.89     10000\n",
-      "\n"
+      "\n",
+      "CPU times: user 16min 19s, sys: 244 ms, total: 16min 19s\n",
+      "Wall time: 16min 19s\n"
      ]
     }
    ],
    "source": [
-    "\n",
+    "%%time\n",
     "# eliminiamo le review che non hanno il label considerando che vogliamo fare dell'aprendimento supervisionato\n",
     "data_filtered = data.dropna(subset=['label']).copy()\n",
     "#generiamo la matrice in base alle fetures precedentemente create su tutto il corpus e ai documenti con cui vogliamo fare la classificazione\n",
