--- a/sentiment.ipynb
+++ b/sentiment.ipynb
@@ -100,6 +100,7 @@
     "count = vectorizer.fit_transform(data['review'].tolist())\n",
     "vocabolario = dict(zip(vectorizer.get_feature_names_out().tolist(),count.sum(axis=0).A1.tolist()))\n",
     "vocabolario_ordinato = dict(sorted(vocabolario.items(), key=lambda x: x[1], reverse=True))\n",
+    "\n",
     "#review pulite\n",
     "vectorizer_2= CountVectorizer()\n",
     "count_clean = vectorizer_2.fit_transform(data['clean_review'].tolist())\n",
@@ -140,11 +141,14 @@
     "                                   max_df=0.7,\n",
     "                                   sublinear_tf=True, \n",
     "                                   use_idf=True)\n",
+    "\n",
     "#creiamo la matrice dei tfidf in base a tutti i documenti del corpus in modo da avere un numero di colonne che rappresentano\n",
-    "#quell che in base al corpus potrebbero essere delle parole significative per la comprensione del label\n",
+    "#quelle che in base al corpus potrebbero essere delle parole significative per la comprensione del label\n",
     "tfidf_vectorizer.fit(data['clean_review'])\n",
+    "\n",
     "# eliminiamo le review che non hanno il label considerando che vogliamo fare dell'aprendimento supervisionato\n",
     "data_filtered = data.dropna(subset=['label']).copy()\n",
+    "\n",
     "#generiamo la matrice in base alle fetures precedentemente create su tutto il corpus e ai documenti con cui vogliamo fare la classificazione\n",
     "data_filtered = data.groupby('label').apply(lambda x: x.sample(2000, replace=False)).reset_index(drop=True)\n",
     "X = tfidf_vectorizer.transform(data_filtered['clean_review'])\n"
@@ -159,9 +163,8 @@
     "# associamo il label ad un valore numerico\n",
     "le = LabelEncoder()\n",
     "data_filtered['label_encoded'] = le.fit_transform(data_filtered['label'])\n",
-    "#classificazione\n",
     "y = data_filtered['label_encoded']\n",
-    "#kernel choice \n",
+    "#dividiamo in train e test\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)"
    ]
   },
@@ -182,9 +185,6 @@
    ],
    "source": [
     "%%time\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)\n",
-    "#X_cv, X_val, y_cv, y_val = train_test_split(X_train, y_train, test_size=0.2, random_state=77, stratify=y)\n",
-    "\n",
     "modello = svm.SVC(kernel='poly')\n",
     "\n",
     "# Definizione della griglia degli iperparametri da esplorare\n",
@@ -193,12 +193,10 @@
     "    'C': [0.1, 1, 10]      # Varia il parametro di costo C\n",
     "}\n",
     "\n",
-    "# Creazione dell'oggetto GridSearchCV\n",
+    "# Ricerca della coppia di parametri migliore in base all'accuratezza con la CV\n",
     "grid_search = GridSearchCV(modello, parametri, cv=5, scoring='accuracy')\n",
-    "\n",
-    "# Esecuzione della Grid Search sulla versione standardizzata dei dati di addestramento\n",
     "grid_search.fit(X_train, y_train)\n",
-    "print(\"Iperparametri ottimali:\", grid_search.best_params_)"
+    "print(\"Iperparametri migliori:\", grid_search.best_params_)"
    ]
   },
   {
@@ -231,7 +229,7 @@
     "linear_svm.fit(X_train, y_train)\n",
     "y_pred = linear_svm.predict(X_test)\n",
     "classification_report(y_test, y_pred)\n",
-    "# Stampa di precisione, richiamo e F1 per ciascuna classe\n",
+    "# Stampa di precision, recall e F1 per ciascuna classe\n",
     "report = classification_report(y_test, y_pred)\n",
     "accuracy = accuracy_score(y_test, y_pred)\n",
     "print(f'Accuracy: {accuracy}')\n",
@@ -264,22 +262,25 @@
    ],
    "source": [
     "%%time\n",
+    "#classificazione con i parametri ottimali su tutto il dataset\n",
     "# eliminiamo le review che non hanno il label considerando che vogliamo fare dell'aprendimento supervisionato\n",
     "data_filtered = data.dropna(subset=['label']).copy()\n",
+    "\n",
     "#generiamo la matrice in base alle fetures precedentemente create su tutto il corpus e ai documenti con cui vogliamo fare la classificazione\n",
     "X = tfidf_vectorizer.transform(data_filtered['clean_review'])\n",
+    "\n",
     "# associamo il label ad un valore numerico\n",
     "le = LabelEncoder()\n",
     "data_filtered['label_encoded'] = le.fit_transform(data_filtered['label'])\n",
+    "\n",
     "#classificazione\n",
     "y = data_filtered['label_encoded']\n",
-    "#kernel choice \n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)\n",
-    "\n",
     "linear_svm =  svm.SVC(kernel='linear')\n",
     "linear_svm.fit(X_train, y_train)\n",
     "y_pred = linear_svm.predict(X_test)\n",
-    "# Stampa di precisione, richiamo e F1 per ciascuna classe\n",
+    "\n",
+    "# Stampa di precision, recall e F1 per ciascuna classe\n",
     "report = classification_report(y_test, y_pred)\n",
     "accuracy = accuracy_score(y_test, y_pred)\n",
     "print(f'Accuracy: {accuracy}')\n",
